--- a/config.yml
+++ b/config.yml
@@ -64,15 +64,15 @@ aut: crs <soburi@gmail.com>
 # a-trl, trl: 翻訳者
 
 # 刊行日(省略した場合は実行時の日付)
-date: 2016-12-29
+date: 2017-04-09
 # 発行年月。YYYY-MM-DD形式による配列指定。省略した場合はdateを使用する
 # 複数指定する場合は次のように記述する
 # [["初版第1刷の日付", "初版第2刷の日付"], ["第2版第1刷の日付"]]
 # 日付の後ろを空白文字で区切り、任意の文字列を置くことも可能。
-history: [["2016-12-29 コミックマーケット91"]]
+history: [["2017-04-09 技術書典2"]]
 # 権利表記(配列で複数指定可)
 # rights: (C) 2016 Re:VIEW Developers
-rights: (C) 2016 crs@国際ソブリ協会
+rights: (C) 2017 crs@国際ソブリ協会
 # description: 説明
 # subject: 短い説明用タグ(配列で複数指定可)
 # type: 書籍のカテゴリーなど(配列で複数指定可)
@@ -297,7 +297,7 @@ texstyle: reviewmacro
 #
 # LaTeX用のdocumentclassを指定する
 # texdocumentclass: ["jsbook", "uplatex,oneside"]
-texdocumentclass: ["jsbook", "b5var, twoside, openany, uplatex"]
+texdocumentclass: ["jsbook", "b5var,twoside,openany,uplatex"]
 #
 # LaTeX用のコマンドを指定する
 texcommand: "uplatex"
@@ -310,7 +310,7 @@ texcommand: "uplatex"
 #
 # LaTeX用のdvi変換コマンドのオプションを指定する
 # dvioptions: "-d 5 "
-# dvioptions: "-f yu-win10.map"
+dvioptions: "-f ptex-yu-win10.map"
 
 # 以下のパラメータを有効にするときには、
 # pdfmaker:
